force-app/main/default/objects/Branch__c/fields/iInsurance_Auto_Home__c.field-meta.xml
<CustomField>
    <fullName>iInsurance_Auto_Home__c</fullName>
    <label>iInsurance (Auto/Home)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>