force-app/main/default/objects/Branch__c/fields/iInterior_Design__c.field-meta.xml
<CustomField>
    <fullName>iInterior_Design__c</fullName>
    <label>iInterior Design</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>