force-app/main/default/objects/Branch__c/fields/iJunk_Removal__c.field-meta.xml
<CustomField>
    <fullName>iJunk_Removal__c</fullName>
    <label>iJunk Removal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>