force-app/main/default/objects/Branch__c/fields/iKitchen_Cabinetry__c.field-meta.xml
<CustomField>
    <fullName>iKitchen_Cabinetry__c</fullName>
    <label>iKitchen Cabinetry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>