force-app/main/default/objects/Branch__c/fields/iLandscape_Install__c.field-meta.xml
<CustomField>
    <fullName>iLandscape_Install__c</fullName>
    <label>iLandscape (Install)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>