force-app/main/default/objects/Branch__c/fields/iLawn_Sod__c.field-meta.xml
<CustomField>
    <fullName>iLawn_Sod__c</fullName>
    <label>iLawn &amp; Sod</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>