force-app/main/default/objects/Branch__c/fields/iLighting__c.field-meta.xml
<CustomField>
    <fullName>iLighting__c</fullName>
    <label>iLighting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>