force-app/main/default/objects/Branch__c/fields/iLocksmiths__c.field-meta.xml
<CustomField>
    <fullName>iLocksmiths__c</fullName>
    <label>iLocksmiths</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>