force-app/main/default/objects/Branch__c/fields/iMattresses__c.field-meta.xml
<CustomField>
    <fullName>iMattresses__c</fullName>
    <label>iMattresses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>