force-app/main/default/objects/Branch__c/fields/iNewspaper__c.field-meta.xml
<CustomField>
    <fullName>iNewspaper__c</fullName>
    <label>iNewspaper</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>