force-app/main/default/objects/Branch__c/fields/Insulation_Service_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Service_Spec_CPL__c</fullName>
    <label>Insulation Service (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>