force-app/main/default/objects/Branch__c/fields/Insurance_AutoHome_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Insurance_AutoHome_Spec_CPL__c</fullName>
    <label>Insurance (Auto/Home) (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>