force-app/main/default/objects/Branch__c/fields/Interior_Design_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Interior_Design_Spec_CPL__c</fullName>
    <label>Interior Design (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>