force-app/main/default/objects/Branch__c/fields/iNursery_Gardening__c.field-meta.xml
<CustomField>
    <fullName>iNursery_Gardening__c</fullName>
    <label>iNursery/Gardening</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>