force-app/main/default/objects/Branch__c/fields/iOptometrist__c.field-meta.xml
<CustomField>
    <fullName>iOptometrist__c</fullName>
    <label>iOptometrist</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>