force-app/main/default/objects/Branch__c/fields/iOutdoor_Playground_Equipment__c.field-meta.xml
<CustomField>
    <fullName>iOutdoor_Playground_Equipment__c</fullName>
    <label>iOutdoor Playground Equipment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>