force-app/main/default/objects/Branch__c/fields/iPainting_Exterior_Interior__c.field-meta.xml
<CustomField>
    <fullName>iPainting_Exterior_Interior__c</fullName>
    <label>iPainting (Exterior/Interior)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>