force-app/main/default/objects/Branch__c/fields/iPatio_Sunroom_Installation__c.field-meta.xml
<CustomField>
    <fullName>iPatio_Sunroom_Installation__c</fullName>
    <label>iPatio Sunroom Installation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>