force-app/main/default/objects/Branch__c/fields/iPest_Control__c.field-meta.xml
<CustomField>
    <fullName>iPest_Control__c</fullName>
    <label>iPest Control</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>