force-app/main/default/objects/Branch__c/fields/iPlumber__c.field-meta.xml
<CustomField>
    <fullName>iPlumber__c</fullName>
    <label>iPlumber</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>