force-app/main/default/objects/Branch__c/fields/iPool_Installation_Remodeling__c.field-meta.xml
<CustomField>
    <fullName>iPool_Installation_Remodeling__c</fullName>
    <label>iPool Installation/Remodeling</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>