force-app/main/default/objects/Branch__c/fields/iPool_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>iPool_Maintenance__c</fullName>
    <label>iPool Maintenance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>