force-app/main/default/objects/Branch__c/fields/iRoofing__c.field-meta.xml
<CustomField>
    <fullName>iRoofing__c</fullName>
    <label>iRoofing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>