force-app/main/default/objects/Branch__c/fields/iRugs_not_flooring__c.field-meta.xml
<CustomField>
    <fullName>iRugs_not_flooring__c</fullName>
    <label>iRugs (not flooring)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>