force-app/main/default/objects/Branch__c/fields/iSatellite_Providers__c.field-meta.xml
<CustomField>
    <fullName>iSatellite_Providers__c</fullName>
    <label>iSatellite Providers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>