force-app/main/default/objects/Branch__c/fields/iSecurity_Systems_Home_Automation__c.field-meta.xml
<CustomField>
    <fullName>iSecurity_Systems_Home_Automation__c</fullName>
    <label>iSecurity Systems/Home Automation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>