force-app/main/default/objects/Branch__c/fields/iSheds__c.field-meta.xml
<CustomField>
    <fullName>iSheds__c</fullName>
    <label>iSheds</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>