force-app/main/default/objects/Branch__c/fields/iSiding__c.field-meta.xml
<CustomField>
    <fullName>iSiding__c</fullName>
    <label>iSiding</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>