force-app/main/default/objects/Branch__c/fields/iSolar_Power__c.field-meta.xml
<CustomField>
    <fullName>iSolar_Power__c</fullName>
    <label>iSolar Power</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>