force-app/main/default/objects/Branch__c/fields/iSpa_Dealers__c.field-meta.xml
<CustomField>
    <fullName>iSpa_Dealers__c</fullName>
    <label>iSpa Dealers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>