force-app/main/default/objects/Branch__c/fields/iStorage_Unit__c.field-meta.xml
<CustomField>
    <fullName>iStorage_Unit__c</fullName>
    <label>iStorage Unit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>