force-app/main/default/objects/Branch__c/fields/iVeterinarian__c.field-meta.xml
<CustomField>
    <fullName>iVeterinarian__c</fullName>
    <label>iVeterinarian</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>