force-app/main/default/objects/Branch__c/fields/iWater_Softener_Filtration__c.field-meta.xml
<CustomField>
    <fullName>iWater_Softener_Filtration__c</fullName>
    <label>iWater Softener Filtration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>