force-app/main/default/objects/Branch__c/fields/iWindow_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>iWindow_Cleaning__c</fullName>
    <label>iWindow Cleaning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>