force-app/main/default/objects/Branch__c/fields/iWindows_Doors__c.field-meta.xml
<CustomField>
    <fullName>iWindows_Doors__c</fullName>
    <label>iWindows/Doors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>