force-app/main/default/objects/Branch__c/fields/Junk_Removal_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Junk_Removal_Spec_CPL__c</fullName>
    <label>Junk Removal (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>