force-app/main/default/objects/Branch__c/fields/Kitchen_Cabinetry__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Cabinetry__c</fullName>
    <label>Kitchen Cabinetry (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>