force-app/main/default/objects/Branch__c/fields/Kitchen_Cabinetry_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Cabinetry_Spec_CPL__c</fullName>
    <label>Kitchen Cabinetry (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>