force-app/main/default/objects/Branch__c/fields/Landscape_Install_DTS__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Install_DTS__c</fullName>
    <label>Landscape (Install) (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>