force-app/main/default/objects/Branch__c/fields/Landscape_maintenance_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Landscape_maintenance_Spec_CPL__c</fullName>
    <label>Landscape (mtnce) (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>