force-app/main/default/objects/Branch__c/fields/Lawn_Sod_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Sod_Spec_CPL__c</fullName>
    <label>Lawn &amp; Sod (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>