force-app/main/default/objects/Branch__c/fields/Locksmiths__c.field-meta.xml
<CustomField>
    <fullName>Locksmiths__c</fullName>
    <label>Locksmiths (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>