force-app/main/default/objects/Branch__c/fields/Locksmiths_DTS__c.field-meta.xml
<CustomField>
    <fullName>Locksmiths_DTS__c</fullName>
    <label>Locksmiths (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>