force-app/main/default/objects/Branch__c/fields/Locksmiths_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Locksmiths_Spec_CPL__c</fullName>
    <label>Locksmiths (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>