force-app/main/default/objects/Branch__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <label>MSA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>