force-app/main/default/objects/Branch__c/fields/NurseryGardening_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>NurseryGardening_Spec_CPL__c</fullName>
    <label>Nursery/Gardening (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>