force-app/main/default/objects/Branch__c/fields/Ordered_Card_Count_not_Active__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Card_Count_not_Active__c</fullName>
    <label>Ordered Card Count (not Active)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>