force-app/main/default/objects/Branch__c/fields/Outdoor_Playground_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Playground_Spec_CPL__c</fullName>
    <label>Outdoor Playground (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>