force-app/main/default/objects/Branch__c/fields/Painting_ExteriorInterior_DTS__c.field-meta.xml
<CustomField>
    <fullName>Painting_ExteriorInterior_DTS__c</fullName>
    <label>Painting (Exterior/Interior) (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>