force-app/main/default/objects/Branch__c/fields/Painting_ExteriorInterior_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Painting_ExteriorInterior_Spec_CPL__c</fullName>
    <label>Painting (Ext/Int) (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>