force-app/main/default/objects/Branch__c/fields/ParentFieldId__c.field-meta.xml
<CustomField>
    <fullName>ParentFieldId__c</fullName>
    <externalId>true</externalId>
    <label>BrancZip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>