force-app/main/default/objects/Branch__c/fields/Patio_Sunroom_Installation_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Patio_Sunroom_Installation_Spec_CPL__c</fullName>
    <label>Patio Sunroom (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>