force-app/main/default/objects/Branch__c/fields/Pest_Control_DTS__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_DTS__c</fullName>
    <label>Pest Control (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>