force-app/main/default/objects/Branch__c/fields/Plumber__c.field-meta.xml
<CustomField>
    <fullName>Plumber__c</fullName>
    <label>Plumber (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>