force-app/main/default/objects/Branch__c/fields/Plumber_DTS__c.field-meta.xml
<CustomField>
    <fullName>Plumber_DTS__c</fullName>
    <label>Plumber (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>