force-app/main/default/objects/Branch__c/fields/Plumber_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Spec_CPL__c</fullName>
    <label>Plumber (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>