force-app/main/default/objects/Branch__c/fields/Pool_InstallationRemodeling__c.field-meta.xml
<CustomField>
    <fullName>Pool_InstallationRemodeling__c</fullName>
    <label>Pool Installation/Remodeling (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>