force-app/main/default/objects/Branch__c/fields/Pool_Maintenance_DTS__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance_DTS__c</fullName>
    <label>Pool Maintenance (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>