force-app/main/default/objects/Branch__c/fields/Region_MD__c.field-meta.xml
<CustomField>
    <fullName>Region_MD__c</fullName>
    <label>Region MD</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>