force-app/main/default/objects/Branch__c/fields/Roofing__c.field-meta.xml
<CustomField>
    <fullName>Roofing__c</fullName>
    <label>Roofing (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>