force-app/main/default/objects/Branch__c/fields/Roofing_DTS__c.field-meta.xml
<CustomField>
    <fullName>Roofing_DTS__c</fullName>
    <label>Roofing (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>