force-app/main/default/objects/Branch__c/fields/Roofing_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Spec_CPL__c</fullName>
    <label>Roofing (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>