force-app/main/default/objects/Branch__c/fields/Rugs_not_flooring_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Rugs_not_flooring_Spec_CPL__c</fullName>
    <label>Rugs (not flooring) (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>