force-app/main/default/objects/Branch__c/fields/Satellite_Providers_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Providers_Spec_CPL__c</fullName>
    <label>Satellite Providers (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>