force-app/main/default/objects/Branch__c/fields/Security_SystemsHome_Automation__c.field-meta.xml
<CustomField>
    <fullName>Security_SystemsHome_Automation__c</fullName>
    <label>Security Systems/Home Automation (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>