force-app/main/default/objects/Branch__c/fields/Security_SystemsHome_Automation_DTS__c.field-meta.xml
<CustomField>
    <fullName>Security_SystemsHome_Automation_DTS__c</fullName>
    <label>Security Systems/Home Automation (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>