force-app/main/default/objects/Branch__c/fields/Security_SystemsHome_Automation_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Security_SystemsHome_Automation_Spec_CPL__c</fullName>
    <label>Security Sys/Hme (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>