force-app/main/default/objects/Branch__c/fields/Sheds__c.field-meta.xml
<CustomField>
    <fullName>Sheds__c</fullName>
    <label>Sheds (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>