force-app/main/default/objects/Branch__c/fields/Sheds_DTS__c.field-meta.xml
<CustomField>
    <fullName>Sheds_DTS__c</fullName>
    <label>Sheds (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>