force-app/main/default/objects/Branch__c/fields/Siding__c.field-meta.xml
<CustomField>
    <fullName>Siding__c</fullName>
    <label>Siding (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>