force-app/main/default/objects/Branch__c/fields/Siding_DTS__c.field-meta.xml
<CustomField>
    <fullName>Siding_DTS__c</fullName>
    <label>Siding (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>