force-app/main/default/objects/Branch__c/fields/Siding_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Siding_Spec_CPL__c</fullName>
    <label>Siding (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>