force-app/main/default/objects/Branch__c/fields/Solar_Power_DTS__c.field-meta.xml
<CustomField>
    <fullName>Solar_Power_DTS__c</fullName>
    <label>Solar Power (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>