force-app/main/default/objects/Branch__c/fields/Solar_Power_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Solar_Power_Spec_CPL__c</fullName>
    <label>Solar Power (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>