force-app/main/default/objects/Branch__c/fields/Sold_Card_Count_not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sold_Card_Count_not_Approved__c</fullName>
    <label>Sold Card Count (not Approved)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>