force-app/main/default/objects/Branch__c/fields/Spa_Dealers_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Spa_Dealers_Spec_CPL__c</fullName>
    <label>Spa Dealers (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>