force-app/main/default/objects/Branch__c/fields/Storage_Unit_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Storage_Unit_Spec_CPL__c</fullName>
    <label>Storage Unit (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>