force-app/main/default/objects/Branch__c/fields/Test_HVAC__c.field-meta.xml
<CustomField>
    <fullName>Test_HVAC__c</fullName>
    <description>Testing Girikon Lookup Rollup</description>
    <label>Test HVAC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>