force-app/main/default/objects/Branch__c/fields/Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian__c</fullName>
    <label>Veterinarian (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>