force-app/main/default/objects/Branch__c/fields/Veterinarian_DTS__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian_DTS__c</fullName>
    <label>Veterinarian (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>