force-app/main/default/objects/Branch__c/fields/Water_Softener_Filtration__c.field-meta.xml
<CustomField>
    <fullName>Water_Softener_Filtration__c</fullName>
    <label>Water Softener Filtration (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>