force-app/main/default/objects/Branch__c/fields/Water_Softener_Filtration_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Water_Softener_Filtration_Spec_CPL__c</fullName>
    <label>Water Softener Filtration (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>