force-app/main/default/objects/Branch__c/fields/Window_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Window_Cleaning__c</fullName>
    <label>Window Cleaning</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>