force-app/main/default/objects/Branch__c/fields/Window_Tinting_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Window_Tinting_Spec_CPL__c</fullName>
    <label>Window Tinting (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>