force-app/main/default/objects/Branch__c/fields/WindowsDoors__c.field-meta.xml
<CustomField>
    <fullName>WindowsDoors__c</fullName>
    <label>Windows/Doors (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>