force-app/main/default/objects/Branch__c/fields/WindowsDoors_DTS__c.field-meta.xml
<CustomField>
    <fullName>WindowsDoors_DTS__c</fullName>
    <label>Windows/Doors (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>