force-app/main/default/objects/Branch__c/fields/WindowsDoors_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>WindowsDoors_Spec_CPL__c</fullName>
    <label>Windows/Doors (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>