force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>MSA__c</columns>
    <columns>Branch_Stage__c</columns>
    <columns>Region_MD__c</columns>
    <columns>Carrier_ID__c</columns>
    <columns>Active_for_Campaigns__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>