force-app/main/default/objects/Branch__c/listViews/April_Launch.listView-meta.xml
<ListView>
    <fullName>April_Launch</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Branch_Stage__c</columns>
    <columns>Carrier_ID__c</columns>
    <columns>Date_Stamp_Delivering__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Stage__c</field>
        <operation>notEqual</operation>
        <value>Pre-Planning</value>
    </filters>
    <filters>
        <field>Date_Stamp_Delivering__c</field>
        <operation>greaterThan</operation>
        <value>4/1/2016</value>
    </filters>
    <filters>
        <field>Date_Stamp_Delivering__c</field>
        <operation>equals</operation>
    </filters>
    <label>April Launch</label>
</ListView>