force-app/main/default/objects/Branch__c/listViews/Delivering_Branches.listView-meta.xml
<ListView>
    <fullName>Delivering_Branches</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>MSA__c</columns>
    <columns>Branch_Stage__c</columns>
    <columns>Carrier_ID__c</columns>
    <columns>Region_MD__c</columns>
    <columns>Active_for_Campaigns__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Stage__c</field>
        <operation>equals</operation>
        <value>Delivering</value>
    </filters>
    <label>Delivering Branches</label>
</ListView>