force-app/main/default/objects/Branch__c/listViews/State.listView-meta.xml
<ListView>
    <fullName>State</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>MSA__c</columns>
    <columns>Branch_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MO</value>
    </filters>
    <label>State</label>
</ListView>